; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_main.c_parse_max_size.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_main.c_parse_max_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [28 x i8] c"Max size parameter is empty\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"Invalid max size: %s\00", align 1
@.str.2 = private unnamed_addr constant [42 x i8] c"Max size must be between 0 and 65535: %ld\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64*)* @parse_max_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_max_size(i8* %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i64* %1, i64** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load i8, i8* %8, align 1
  %10 = sext i8 %9 to i32
  %11 = icmp eq i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = call i32 (i8*, ...) @LOGE(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %34

14:                                               ; preds = %2
  %15 = load i8*, i8** %4, align 8
  %16 = call i64 @strtol(i8* %15, i8** %6, i32 0)
  store i64 %16, i64* %7, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = load i8, i8* %17, align 1
  %19 = sext i8 %18 to i32
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %14
  %22 = load i8*, i8** %4, align 8
  %23 = call i32 (i8*, ...) @LOGE(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0), i8* %22)
  store i32 0, i32* %3, align 4
  br label %34

24:                                               ; preds = %14
  %25 = load i64, i64* %7, align 8
  %26 = and i64 %25, -65536
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %31

28:                                               ; preds = %24
  %29 = load i64, i64* %7, align 8
  %30 = call i32 (i8*, ...) @LOGE(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.2, i64 0, i64 0), i64 %29)
  store i32 0, i32* %3, align 4
  br label %34

31:                                               ; preds = %24
  %32 = load i64, i64* %7, align 8
  %33 = load i64*, i64** %5, align 8
  store i64 %32, i64* %33, align 8
  store i32 1, i32* %3, align 4
  br label %34

34:                                               ; preds = %31, %28, %21, %12
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i32 @LOGE(i8*, ...) #1

declare dso_local i64 @strtol(i8*, i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
